seem to be done with to/from JSON instances

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -53,7 +53,9 @@ library
                  , persistent-postgresql
                  , monad-logger
                  , aeson
-		 
+                 , syb
+                 , text
+
     exposed-modules: 
                    Blockchain.Colors
                    Blockchain.Constants
