--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -28,6 +28,7 @@ library
                  , base16-bytestring
                  , binary
                  , bytestring
+                 , unordered-containers
                  , containers
                  , cryptohash
                  , data-default
@@ -55,6 +56,7 @@ library
                  , aeson
                  , syb
                  , text
+                 , attoparsec
 
     exposed-modules: 
                    Blockchain.Colors
