compiling with changes from big refactor. Still working on ethereum-client-haskell

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -22,7 +22,7 @@ source-repository this
   tag:      v0.0.1
 
 library
-    default-language: Haskell98
+    default-language: Haskell2010
     build-depends: 
                    base >= 4 && < 5
                  , base16-bytestring
@@ -58,6 +58,8 @@ library
                  , text
                  , attoparsec
                  , path-pieces
+                 , ethereum-encryption
+                 , ethereum-util
 		 
     exposed-modules: 
                    Blockchain.Colors
@@ -68,18 +70,15 @@ library
                    Blockchain.Data.Code
                    Blockchain.Data.Log
                    Blockchain.Data.Peer
-                   Blockchain.Data.SignedTransaction
                    Blockchain.Data.Transaction
                    Blockchain.Data.TransactionReceipt
                    Blockchain.DB.CodeDB
                    Blockchain.ExtDBs
-                   Blockchain.Format
-                   Blockchain.ExtWord
-                   Blockchain.SHA
-                   Blockchain.Util
                    Blockchain.Data.BlockDB
                    Blockchain.Data.AddressStateDB
                    Blockchain.Data.RawTransaction
+                   Blockchain.Data.PersistTypes
+                   Blockchain.Data.MiscJSON
 
     C-sources: fastNonceFinder/nonceFinder.c
     ghc-options: -Wall -O2 
