--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -22,7 +22,7 @@ source-repository this
   tag:      v0.0.1
 
 library
-    default-language: Haskell2010
+    default-language: Haskell98
     build-depends: 
                    base >= 4 && < 5
                  , base16-bytestring
@@ -80,7 +80,8 @@ library
                    Blockchain.Data.MiscJSON
 
     C-sources: fastNonceFinder/nonceFinder.c
-    ghc-options: -Wall
+    ghc-options: -Wall -O2 -static
+    extensions: TemplateHaskell
     buildable: True
     hs-source-dirs: src
 
