some cleaning and new BlockDB functions. Preparing for p2p-server refactor

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -60,7 +60,8 @@ library
                  , path-pieces
                  , ethereum-encryption
                  , ethereum-util
-		 
+                 , esqueleto
+
     exposed-modules: 
                    Blockchain.Colors
                    Blockchain.Constants
