Create SQL diff functions and hashDB (which is levelDB) for storing safe/unsafe key pairs.

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -75,6 +75,7 @@ library
                    Blockchain.Data.TransactionReceipt
                    Blockchain.DB.CodeDB
                    Blockchain.ExtDBs
+                   Blockchain.Data.DiffDB
                    Blockchain.Data.BlockDB
                    Blockchain.Data.AddressStateDB
                    Blockchain.Data.RawTransaction
