Adding a new table to hold results of transaction runs.

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -79,6 +79,7 @@ library
                    Blockchain.Data.BlockDB
                    Blockchain.Data.AddressStateDB
                    Blockchain.Data.RawTransaction
+                   Blockchain.Data.TransactionResult
                    Blockchain.Data.PersistTypes
                    Blockchain.Data.MiscJSON
 
