Adding a storage DB type, and cleaning up a lot of stuff.

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -74,6 +74,7 @@ library
                    Blockchain.Data.Transaction
                    Blockchain.Data.TransactionReceipt
                    Blockchain.DB.CodeDB
+                   Blockchain.DB.HashDB
                    Blockchain.ExtDBs
                    Blockchain.Data.DiffDB
                    Blockchain.Data.BlockDB
