Adding an extra table to hold a list of VM processed blocks.

--- a/ethereum-data-sql.cabal
+++ b/ethereum-data-sql.cabal
@@ -74,6 +74,7 @@ library
                    Blockchain.Data.Json
                    Blockchain.Data.Log
                    Blockchain.Data.PersistTypes
+                   Blockchain.Data.ProcessedDB
                    Blockchain.Data.RawTransaction
                    Blockchain.Data.StablenetGenesis
                    Blockchain.Data.TestnetGenesis
